Fixed hero getting clipped on small screen heights

--- a/_sass/hero.sass
+++ b/_sass/hero.sass
@@ -2,6 +2,7 @@
 	display: flex
 	width: 100vw
 	height: 100vh
+	min-height: 800px
 
 	// position: relative
 	background: $sky
@@ -19,6 +20,7 @@
 	.welcome
 		width: 500px
 		height: 300px
+		margin-top: 40px
 		text-align: center
 
 		.hello
@@ -62,6 +64,7 @@
 	right: 0
 	top: 0
 	bottom: 0
+	min-height: 800px
 
 	& > div
 		position: fixed
@@ -69,6 +72,7 @@
 		bottom: 0
 		right: 0
 		top: 0
+		min-height: 800px
 
 		&:after
 			content: ""
